feat: Add auto-updated year in footer

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="styles/base.css" />
+        <link rel="stylesheet" href="styles/larger.css" />
     </head>
     <body>
         <header>
             <img
+                id="profile-picture"
                 src="images/profile-pic.png"
                 alt="Fernando Chazarreta's profile picture"
             />
@@ -57,5 +59,6 @@
             </p>
             <p id="lastModified"></p>
         </footer>
+    <script src="scripts/getDate.js"></script>
     </body>
 </html>
