fix: Remove trailing slash on void elements

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fernando Chazarreta - WDD 230 - Web Frontend Development</title>
     <meta
       name="description"
       content="This is the course assignment portal for BYU's 'WDD 230 - Web Frontend Development' course. By Fernando Chazarreta"
-    />
-    <meta name="author" content="Fernando Chazarreta" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    >
+    <meta name="author" content="Fernando Chazarreta">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500&family=Inter&family=Noto+Sans:wght@900&display=swap"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles/base.css" />
-    <link rel="stylesheet" href="styles/larger.css" />
+    >
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
   </head>
   <body>
     <header>
@@ -24,7 +24,7 @@
         id="profile-picture"
         src="images/profile-pic.webp"
         alt="Fernando Chazarreta's profile picture"
-      />
+      >
       <h1>Fernando Chazarreta</h1>
     </header>
     <nav>
