--- a/week1/chamber-site-plan.html
+++ b/week1/chamber-site-plan.html
@@ -17,13 +17,13 @@
     <header>
       <section class="header-title">
         <h2>Site Plan</h2>
-        <h1>Caleta Olivia Chamber of Commerce</h1>
+        <h1>Caleta Olivia<br />Chamber of Commerce</h1>
         <h2>Fernando Chazarreta</h2>
       </section>
     </header>
     <main>
       <hr />
-      <section class="overview-section">
+      <section class="section">
         <h2>Overview</h2>
 
         <section class="overview-card">
@@ -75,30 +75,39 @@
         </section>
       </section>
       <hr />
-      <section class="style-guide-section">
+      <section class="section">
         <h2>Style Guide</h2>
         <section class="color-schema">
           <h3>Color Schema</h3>
           <h4>Color Palette</h4>
           <p>Palette URL</p>
           <a href="" target="_blank">[palette-url]</a>
-          <table class="colors">
-            <tr>
-              <th>Primary</th>
-              <th>Secondary</th>
-              <th>Accent 1</th>
-              <th>Accent 2</th>
-              <th>Accent 3</th>
-            </tr>
-            <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-            <tr>
-              <td class="primary">[#283659]</td>
-              <td class="secondary">[#D8B9A3]</td>
-              <td class="accent1">[#00BAD9]</td>
-              <td class="accent2">[#724437]</td>
-              <td class="accent3">[#A66E55]</td>
-            </tr>
-          </table>
+          <div class="colors-table">
+            <div class="table-cell">
+              <p>Primary</p>
+              <div class="primary"><p>[#283659]</p></div>
+            </div>
+
+            <div class="table-cell">
+              <p>Secondary</p>
+              <div class="secondary"><p>[#D8B9A3]</p></div>
+            </div>
+
+            <div class="table-cell">
+              <p>Accent 1</p>
+              <div class="accent-1"><p>[#00BAD9]</p></div>
+            </div>
+
+            <div class="table-cell">
+              <p>Accent 2</p>
+              <div class="accent-2"><p>[#724437]</p></div>
+            </div>
+
+            <div class="table-cell">
+              <p>Accent 3</p>
+              <div class="accent-3"><p>[#A66E55]</p></div>
+            </div>
+          </div>
         </section>
         <section class="typography-section">
           <h3>Typography</h3>
