feat: Style overview cards

--- a/week1/chamber-site-plan.html
+++ b/week1/chamber-site-plan.html
@@ -55,23 +55,25 @@
 
         <section class="overview-card">
           <h3>Scenarios</h3>
-          <p>
-            What upcoming events, workshops, and networking opportunities are
-            happening in our city's business community?
-          </p>
-          <p>What resources and programs are available?</p>
-          <p>
-            What are the benefits of joining our chamber of commerce, and how
-            can businesses apply?
-          </p>
-          <p>
-            What are the key attractions and activities that define the city's
-            tourism offerings and points of interest?
-          </p>
-          <p>
-            What is the current weather condition, and what are the forecasts
-            and seasonal climate expectations?
-          </p>
+          <ul>
+            <li>
+              What upcoming events, workshops, and networking opportunities are
+              happening in our city's business community?
+            </li>
+            <li>What resources and programs are available?</li>
+            <li>
+              What are the benefits of joining our chamber of commerce, and how
+              can businesses apply?
+            </li>
+            <li>
+              What are the key attractions and activities that define the city's
+              tourism offerings and points of interest?
+            </li>
+            <li>
+              What is the current weather condition, and what are the forecasts
+              and seasonal climate expectations?
+            </li>
+          </ul>
         </section>
       </section>
       <hr />
@@ -80,8 +82,6 @@
         <section class="color-schema">
           <h3>Color Schema</h3>
           <h4>Color Palette</h4>
-          <p>Palette URL</p>
-          <a href="" target="_blank">[palette-url]</a>
           <div class="colors-table">
             <div class="table-cell">
               <p>Primary</p>
@@ -108,6 +108,9 @@
               <div class="accent-3"><p>[#A66E55]</p></div>
             </div>
           </div>
+          <p>Palette URL</p>
+          <a href="" target="_blank">[palette-url]</a>
+
         </section>
         <section class="typography-section">
           <h3>Typography</h3>
