feat: Add color schema card and colors

--- a/week1/chamber-site-plan.html
+++ b/week1/chamber-site-plan.html
@@ -83,33 +83,33 @@
           <h3>Color Schema</h3>
           <h4>Color Palette</h4>
           <div class="colors-table">
-            <div class="table-cell">
+            <div class="table-cell primary">
               <p>Primary</p>
-              <div class="primary"><p>[#283659]</p></div>
+              <p>[#283659]</p>
             </div>
 
-            <div class="table-cell">
+            <div class="table-cell secondary">
               <p>Secondary</p>
-              <div class="secondary"><p>[#D8B9A3]</p></div>
+              <p>[#D8B9A3]</p>
             </div>
 
-            <div class="table-cell">
+            <div class="table-cell accent-1">
               <p>Accent 1</p>
-              <div class="accent-1"><p>[#00BAD9]</p></div>
+              <p>[#00BAD9]</p>
             </div>
 
-            <div class="table-cell">
+            <div class="table-cell accent-2">
               <p>Accent 2</p>
-              <div class="accent-2"><p>[#724437]</p></div>
+              <p>[#724437]</p>
             </div>
 
-            <div class="table-cell">
+            <div class="table-cell accent-3">
               <p>Accent 3</p>
-              <div class="accent-3"><p>[#A66E55]</p></div>
+              <p>[#A66E55]</p>
             </div>
           </div>
           <p>Palette URL</p>
-          <a href="" target="_blank">[palette-url]</a>
+          <a href="https://color.adobe.com/Caleta-Olivia-Chamber-of-Commerce-color-theme-fc26efc2-2ba4-4969-8802-1be762d62757/" target="_blank">Adobe Color Palette: Caleta Olivia Chamber of Commerce</a>
 
         </section>
         <section class="typography-section">
