feat: Style typography section

--- a/week1/chamber-site-plan.html
+++ b/week1/chamber-site-plan.html
@@ -109,32 +109,37 @@
             </div>
           </div>
           <p>Palette URL</p>
-          <a href="https://color.adobe.com/Caleta-Olivia-Chamber-of-Commerce-color-theme-fc26efc2-2ba4-4969-8802-1be762d62757/" target="_blank">Adobe Color Palette: Caleta Olivia Chamber of Commerce</a>
-
+          <a
+            href="https://color.adobe.com/Caleta-Olivia-Chamber-of-Commerce-color-theme-fc26efc2-2ba4-4969-8802-1be762d62757/"
+            target="_blank"
+            >Adobe Color Palette: Caleta Olivia Chamber of Commerce</a
+          >
         </section>
         <section class="typography-section">
           <h3>Typography</h3>
-          <h4>Font family: Raleway</h4>
+          <ul>
+          <li><h4>Font family: Raleway</h4></li>
+          
+          <li><div class="main-heading">
+            <h4>Main Heading:<br>Raleway Extra Bold 800</h4>
+            <div class="heading-on-light">
+              <h1>Main Heading<br>on light background</h1>
+            </div>
+            <div class="heading-on-dark">
+              <h1>Main Heading<br>on dark background</h1>
+            </div>
+          </div></li>
+          <li><div class="secondary-heading">
+            <h4>Secondary Headings: Raleway SemiBold 600</h4>
+            <div class="heading-on-light">
+              <h2>Secondary Heading<br>on light background</h2>
+            </div>
+            <div class="heading-on-dark">
+              <h2>Secondary Heading<br>on dark background</h2>
+            </div>
+          </div></li>
 
-          <h4>Main Heading: Raleway Extra Bold 800</h4>
-          <h4>Heading example:</h4>
-          <div class="heading-on-light">
-            <h1>Main Heading on light background</h1>
-          </div>
-          <div class="heading-on-dark">
-            <h1>Main Heading on light background</h1>
-          </div>
-          <h4>Secondary Headings: Raleway SemiBold 600</h4>
-          <h4>Secondary Headings example:</h4>
-          <div class="heading-on-light">
-            <h2>Secondary Heading on light background</h2>
-          </div>
-          <div class="heading-on-dark">
-            <h2>Secondary Heading on dark background</h2>
-          </div>
-
-          <h4>Paragraph: Raleway Thin 100</h4>
-          <h4>Paragraph Example:</h4>
+          <li><h4>Paragraph: Raleway Thin 100</h4>
           <div class="paragraph-on-light">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -150,7 +155,8 @@
               eligendi tenetur id mollitia sequi corporis perferendis, at
               nesciunt in fugit labore nemo.
             </p>
-          </div>
+          </div></li>
+        </ul>
         </section>
       </section>
 
