--- a/week1/chamber-site-plan.html
+++ b/week1/chamber-site-plan.html
@@ -159,8 +159,25 @@
         </ul>
         </section>
       </section>
+      <section class="wireframes-section">
+        <h2>Wireframes</h2>
+        <h3>Mobile 1</h3>
+        <img src="images/mobile-1.png" alt="Mobile 1 Wireframes">
+        <hr>
 
-      <h3></h3>
+        <h3>Mobile 2</h3>
+        <img src="images/mobile-2.png" alt="Mobile 2 Wireframes">
+        <hr>
+
+        <h3>Mobile 3</h3>
+        <img src="images/mobile-3.png" alt="Mobile 3 Wireframes">
+        <hr>
+
+        <h3>Desktop</h3>
+        <img src="images/desktop-1.png" alt="Desktop Wireframes">
+
+      </section>
+
     </main>
     <footer></footer>
   </body>
