--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <ul>
         <li><a href="#" class="active">Home</a></li>
         <li><a href="#">Chamber</a></li>
-        <li><a href="#">Site Plan</a></li>
+        <li><a href="week1/chamber-site-plan.html">Site Plan</a></li>
         <li><a href="#">Form</a></li>
       </ul>
     </nav>
