fix: correct html to validate

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chamber of Commerce's Site plan</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Site plan - Chamber of Commerce</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,600;0,800;1,200;1,300&display=swap"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles/chamber-plan-base.css" />
+    >
+    <link rel="stylesheet" href="styles/chamber-plan-base.css">
+    <meta name="author" content="Fernando Chazarreta">
+    <meta
+      name="description"
+      content="Site plan for the Caleta Olivia's Chamber of Commerce website"
+    >
   </head>
   <body>
     <header>
       <section class="header-title">
-        <h2>Site Plan</h2>
-        <h1>Caleta Olivia<br />Chamber of Commerce</h1>
+        <h1>
+          Site Plan <br>
+          Caleta Olivia<br>Chamber of Commerce
+        </h1>
         <h2>Fernando Chazarreta</h2>
       </section>
     </header>
     <main>
-      <hr />
+      <hr>
       <section class="section">
         <h2>Overview</h2>
 
@@ -76,7 +83,7 @@
           </ul>
         </section>
       </section>
-      <hr />
+      <hr>
       <section class="section">
         <h2>Style Guide</h2>
         <section class="color-schema">
@@ -118,45 +125,51 @@
         <section class="typography-section">
           <h3>Typography</h3>
           <ul>
-          <li><h4>Font family: Raleway</h4></li>
-          
-          <li><div class="main-heading">
-            <h4>Main Heading:<br>Raleway Extra Bold 800</h4>
-            <div class="heading-on-light">
-              <h1>Main Heading<br>on light background</h1>
-            </div>
-            <div class="heading-on-dark">
-              <h1>Main Heading<br>on dark background</h1>
-            </div>
-          </div></li>
-          <li><div class="secondary-heading">
-            <h4>Secondary Headings: Raleway SemiBold 600</h4>
-            <div class="heading-on-light">
-              <h2>Secondary Heading<br>on light background</h2>
-            </div>
-            <div class="heading-on-dark">
-              <h2>Secondary Heading<br>on dark background</h2>
-            </div>
-          </div></li>
+            <li><h4>Font family: Raleway</h4></li>
 
-          <li><h4>Paragraph: Raleway Thin 100</h4>
-          <div class="paragraph-on-light">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Cupiditate minus ullam dolore aliquid impedit dolor, ab, sapiente
-              eligendi tenetur id mollitia sequi corporis perferendis, at
-              nesciunt in fugit labore nemo.
-            </p>
-          </div>
-          <div class="paragraph-on-dark">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Cupiditate minus ullam dolore aliquid impedit dolor, ab, sapiente
-              eligendi tenetur id mollitia sequi corporis perferendis, at
-              nesciunt in fugit labore nemo.
-            </p>
-          </div></li>
-        </ul>
+            <li>
+              <div class="main-heading">
+                <h4>Main Heading:<br>Raleway Extra Bold 800</h4>
+                <div class="heading-on-light">
+                  <h2 class="top-heading">Main Heading<br>on light background</h2>
+                </div>
+                <div class="heading-on-dark">
+                  <h2 class="top-heading">Main Heading<br>on dark background</h2>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="secondary-heading">
+                <h4>Secondary Headings: Raleway SemiBold 600</h4>
+                <div class="heading-on-light">
+                  <h2>Secondary Heading<br>on light background</h2>
+                </div>
+                <div class="heading-on-dark">
+                  <h2>Secondary Heading<br>on dark background</h2>
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <h4>Paragraph: Raleway Thin 100</h4>
+              <div class="paragraph-on-light">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Cupiditate minus ullam dolore aliquid impedit dolor, ab,
+                  sapiente eligendi tenetur id mollitia sequi corporis
+                  perferendis, at nesciunt in fugit labore nemo.
+                </p>
+              </div>
+              <div class="paragraph-on-dark">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Cupiditate minus ullam dolore aliquid impedit dolor, ab,
+                  sapiente eligendi tenetur id mollitia sequi corporis
+                  perferendis, at nesciunt in fugit labore nemo.
+                </p>
+              </div>
+            </li>
+          </ul>
         </section>
       </section>
       <section class="wireframes-section">
@@ -175,9 +188,7 @@
 
         <h3>Desktop</h3>
         <img src="images/desktop-1.png" alt="Desktop Wireframes">
-
       </section>
-
     </main>
     <footer></footer>
   </body>
