--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     >
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <header>
@@ -42,7 +43,7 @@
       <section class="card">
         <h3>Learning Activities</h3>
         <ul>
-          <li><a href=""></a></li>
+          <li>Week 02 - <a href="week02/design.html">Web Design Principles</a></li>
         </ul>
       </section>
       <section class="card">
