--- a/index.html
+++ b/index.html
@@ -2,21 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <!-- Setting the viewport to make the website look good on all devices:-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Set page title-->
     <title>Fernando Chazarreta - WDD 230 - Web Frontend Development</title>
+
+    <!-- Meta tags: Description an author. Used in Google results page -->
     <meta
       name="description"
       content="This is the course assignment portal for BYU's 'WDD 230 - Web Frontend Development' course. By Fernando Chazarreta"
     >
     <meta name="author" content="Fernando Chazarreta">
+
+    <!-- Meta tags: Open graph properties. Used when the page is shared into Facebook -->
+    <meta property="og:title" content="Fernando Chazarreta - WDD 230 - Web Frontend Development">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://media-cdn.tripadvisor.com/media/photo-s/14/b8/8c/ea/photo0jpg.jpg">
+    <meta property="og:url" content="https://fernandochaza.github.io/wdd230/">
+
+    <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500&family=Inter&family=Noto+Sans:wght@900&display=swap"
       rel="stylesheet"
     >
+
+    <!-- External CSS-->
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
+
+    <!-- Favicon -->
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
@@ -32,7 +48,7 @@
       <ul>
         <li><a href="#" class="active">Home</a></li>
         <li><a href="#">Chamber</a></li>
-        <li><a href="week1/chamber-site-plan.html">Site Plan</a></li>
+        <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
         <li><a href="#">Form</a></li>
       </ul>
     </nav>
