feat: add responsive navigation activity

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
       <section class="card">
         <h3>Learning Activities</h3>
         <ul>
-          <li>Week 02 - <a href="week02/design.html">Web Design Principles</a></li>
+          <li>Week 02 - <a href="week02/design.html" target="_blank">Web Design Principles</a></li>
+          <li>Week 02 - <a href="https://codepen.io/fernandochaza/pen/abQNpMY" target="_blank">Responsive Navigation</a></li>
         </ul>
       </section>
       <section class="card">
