--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <ul>
           <li>Week 02 - <a href="week02/design.html" target="_blank">Web Design Principles</a></li>
           <li>Week 02 - <a href="https://codepen.io/fernandochaza/pen/abQNpMY" target="_blank">Responsive Navigation</a></li>
+          <li>Week 02 - <a href="week02/bom.html" target="_blank">Manipulating the DOM</a></li>
         </ul>
       </section>
       <section class="card">
