--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     >
 
     <!-- External CSS-->
-    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">    <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
 
     <!-- Favicon -->
