feat: add dynamic menu in mobile

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
       >
       <h1>Fernando Chazarreta</h1>
     </header>
-    <nav>
+    <div class="menu-button-container">
+      <img class="menu-button" src="images/hamburger-menu.svg" alt="Menu Button">
+    </div>
+    <nav id="my-nav">
       <ul>
         <li><a href="#" class="active">Home</a></li>
         <li><a href="#">Chamber</a></li>
@@ -78,6 +81,7 @@
       </p>
       <p id="lastModified"></p>
     </footer>
+    <script src="scripts/toggleMenu.js"></script>
     <script src="scripts/getDate.js"></script>
   </body>
 </html>
