feat: Create chamber site files

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       >
       <h1>Fernando Chazarreta</h1>
       <div class="dark-mode-container">
-        <img class="dark-light-button" src="images/dark-mode.svg" alt="Menu Button">
+        <img class="dark-light-button" src="images/dark-mode.svg" alt="Dark Mode Button">
       </div>
   
     </header>
@@ -51,7 +51,7 @@
     <nav id="my-nav">
       <ul>
         <li><a href="#" class="active">Home</a></li>
-        <li><a href="#">Chamber</a></li>
+        <li><a href="chamber/index.html">Chamber</a></li>
         <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
         <li><a href="#">Form</a></li>
       </ul>
