--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,33 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <!-- Set the viewport to make the website look good on all devices:-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Set page title-->
-    <title>[Page Title]</title>
+    <title>Caleta Olivia Chamber of Commerce</title>
 
     <!-- Meta tags: Description an author. Used in Google results page -->
-    <meta name="description" content="[Page Short Description]">
-    <meta name="author" content="Fernando Chazarreta">
+    <meta
+      name="description"
+      content="The Chamber of Commerce represents our city's main businesses, attractions and places of interest"
+    />
+    <meta name="author" content="Fernando Chazarreta" />
 
     <!-- Meta tags: Open graph properties. Used when the page is shared into Facebook -->
-    <meta property="og:title" content="[Page Title]">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="[Page Image URL]">
-    <meta property="og:url" content="[Page Home URL]">
+    <meta property="og:title" content="Caleta Olivia Chamber of Commerce" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="[Page Image URL]" />
+    <meta
+      property="og:url"
+      content="https://fernandochaza.github.io/wdd230/chamber/"
+    />
 
     <!-- Google fonts preconnect -->
 
     <!-- External CSS files -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="styles/[Base CSS File]">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/larger.css" />
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico">
-</head>
-<body>
-    
-</body>
+    <link rel="icon" href="favicon.ico" />
+  </head>
+  <body>
+    <header>
+      <div class="logo-container">
+        <img class="logo" src="" alt="Logo" />
+      </div>
+      <div class="header-title-container">
+        <h3>Caleta Olivia<br />Chamber of Commerce</h3>
+      </div>
+      <div class="menu-button-container">
+        <img class="menu-button" src="" alt="Menu Button" />
+      </div>
+    </header>
+    <nav id="nav-section">
+      <ul class="navigation-container">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Discover</a></li>
+        <li><a href="#">Directory</a></li>
+        <li><a href="#">Join</a></li>
+      </ul>
+    </nav>
+    <section class="hero-container">
+      <h1 class="hero-header">Caleta Olivia<br />Chamber of Commerce</h1>
+      <img class="hero-image" src="" alt="Hero Background" />
+      <a class="button hero-call-to-action" href="#">Join</a>
+    </section>
+    <section class="weather-widget">
+      <h3>Caleta Olivia</h3>
+      <a class="button weather-button" href="#">More...</a>
+    </section>
+    <section class="directory-button-container">
+      <h3>Our Directory</h3>
+      <a class="button directory-button" href="#">Directory</a>
+    </section>
+    <main>
+      <section class="events-section">
+        <h2>Upcoming Events</h2>
+        <div class="event-card">
+          <h3 class="event-card-title">Event Title</h3>
+          <p>
+            This is the resource text. This is the resource text. This is the
+            resource text.
+          </p>
+          <img class="event-card-image" src="" alt="Go to event button" />
+        </div>
+        <div class="event-card">
+          <h3 class="event-card-title">Event Title</h3>
+          <p>
+            This is the resource text. This is the resource text. This is the
+            resource text.
+          </p>
+          <img class="event-card-image" src="" alt="Go to event button" />
+        </div>
+        <div class="event-card">
+          <h3 class="event-card-title">Event Title</h3>
+          <p>
+            This is the resource text. This is the resource text. This is the
+            resource text.
+          </p>
+          <img class="event-card-image" src="" alt="Go to event button" />
+        </div>
+      </section>
+      <section class="business-section">
+        <h2>Spotlights in Caleta Olivia</h2>
+        <div class="business-card">
+          <img class="business-card-image" src="" alt="" />
+          <p>
+            This is the place text. This is the place text. This is the place
+            text. This is the place text.
+          </p>
+          <a class="button business-card-button" href="#">Discover More</a>
+        </div>
+        <div class="business-card">
+          <img class="business-card-image" src="" alt="" />
+          <p>
+            This is the place text. This is the place text. This is the place
+            text. This is the place text.
+          </p>
+          <a class="button business-card-button" href="#">Discover More</a>
+        </div>
+        <div class="business-card">
+          <img class="business-card-image" src="" alt="" />
+          <p>
+            This is the place text. This is the place text. This is the place
+            text. This is the place text.
+          </p>
+          <a class="button business-card-button" href="#">Discover More</a>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="site-fotter">
+        <div class="location">
+          <img class="location-icon" src="" alt="Location Icon" />
+          <p>San Martín 1869</p>
+        </div>
+        <div class="contact">
+          <p>Contact Us</p>
+          <img class="whatsapp-icon" src="" alt="Whatsapp Icon" />
+          <img class="email-icon" src="" alt="Email Icon" />
+        </div>
+        <div class="social">
+          <img class="instagram-icon" src="" alt="Instagram Icon" />
+          <img class="linkedin-icon" src="" alt="LinkedIn Icon" />
+          <img class="youtube-icon" src="" alt="Youtube Icon" />
+        </div>
+      </div>
+      <div class="project-sign">
+        <p>
+          &copy; <span id="year"></span> &bull; Fernando Chazarreta &bull;
+          <span id="flag"></span> Argentina
+        </p>
+        <p>
+          This site is a project for the "WDD230 - Front End Development"
+          course.
+        </p>
+        <p id="lastModified"></p>
+      </div>
+    </footer>
+  </body>
 </html>
