feat: Add favicon and Home page images

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,17 +36,25 @@
 
     <!-- Favicon -->
     <link rel="icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <header>
       <div class="logo-container">
-        <img class="logo" src="" alt="Logo" />
+        <img class="logo" src="images/logo.png" alt="Logo" />
       </div>
       <div class="header-title-container">
         <h3>Caleta Olivia<br />Chamber of Commerce</h3>
       </div>
       <div class="menu-button-container">
-        <img class="menu-button" src="" alt="Menu Button" />
+        <img
+          class="menu-button"
+          src="images/menu-button.png"
+          alt="Menu Button"
+        />
       </div>
     </header>
     <nav id="nav-section">
@@ -59,7 +67,11 @@
     </nav>
     <section class="hero-container">
       <h1 class="hero-header">Caleta Olivia<br />Chamber of Commerce</h1>
-      <img class="hero-image" src="" alt="Hero Background" />
+      <img
+        class="hero-image"
+        src="images/gorosito-hero.webp"
+        alt="Hero Background"
+      />
       <a class="button hero-call-to-action" href="#">Join</a>
     </section>
     <section class="weather-widget">
@@ -79,7 +91,7 @@
             This is the resource text. This is the resource text. This is the
             resource text.
           </p>
-          <img class="event-card-image" src="" alt="Go to event button" />
+          <img class="event-card-image" src="images/dots-circle-horizontal.png" alt="Go to event button" />
         </div>
         <div class="event-card">
           <h3 class="event-card-title">Event Title</h3>
@@ -87,7 +99,7 @@
             This is the resource text. This is the resource text. This is the
             resource text.
           </p>
-          <img class="event-card-image" src="" alt="Go to event button" />
+          <img class="event-card-image" src="images/dots-circle-horizontal.png" alt="Go to event button" />
         </div>
         <div class="event-card">
           <h3 class="event-card-title">Event Title</h3>
@@ -95,13 +107,13 @@
             This is the resource text. This is the resource text. This is the
             resource text.
           </p>
-          <img class="event-card-image" src="" alt="Go to event button" />
+          <img class="event-card-image" src="images/dots-circle-horizontal.png" alt="Go to event button" />
         </div>
       </section>
       <section class="business-section">
         <h2>Spotlights in Caleta Olivia</h2>
         <div class="business-card">
-          <img class="business-card-image" src="" alt="" />
+          <img class="business-card-image" src="images/gorosito-hero.webp" alt="" />
           <p>
             This is the place text. This is the place text. This is the place
             text. This is the place text.
@@ -109,7 +121,7 @@
           <a class="button business-card-button" href="#">Discover More</a>
         </div>
         <div class="business-card">
-          <img class="business-card-image" src="" alt="" />
+          <img class="business-card-image" src="images/gorosito-hero.webp" alt="" />
           <p>
             This is the place text. This is the place text. This is the place
             text. This is the place text.
@@ -117,7 +129,7 @@
           <a class="button business-card-button" href="#">Discover More</a>
         </div>
         <div class="business-card">
-          <img class="business-card-image" src="" alt="" />
+          <img class="business-card-image" src="images/gorosito-hero.webp" alt="" />
           <p>
             This is the place text. This is the place text. This is the place
             text. This is the place text.
@@ -129,18 +141,18 @@
     <footer>
       <div class="site-fotter">
         <div class="location">
-          <img class="location-icon" src="" alt="Location Icon" />
+          <img class="location-icon" src="images/map.png" alt="Location Icon" />
           <p>San Martín 1869</p>
         </div>
         <div class="contact">
           <p>Contact Us</p>
-          <img class="whatsapp-icon" src="" alt="Whatsapp Icon" />
-          <img class="email-icon" src="" alt="Email Icon" />
+          <img class="whatsapp-icon" src="images/whatsapp.png" alt="Whatsapp Icon" />
+          <img class="email-icon" src="images/mail.png" alt="Email Icon" />
         </div>
         <div class="social">
-          <img class="instagram-icon" src="" alt="Instagram Icon" />
-          <img class="linkedin-icon" src="" alt="LinkedIn Icon" />
-          <img class="youtube-icon" src="" alt="Youtube Icon" />
+          <img class="instagram-icon" src="images/instagram.png" alt="Instagram Icon" />
+          <img class="linkedin-icon" src="images/linkedin.png" alt="LinkedIn Icon" />
+          <img class="youtube-icon" src="images/youtube.png" alt="Youtube Icon" />
         </div>
       </div>
       <div class="project-sign">
