--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,6 +25,12 @@
     />
 
     <!-- Google fonts preconnect -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,600;0,800;1,200;1,300&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- External CSS files -->
     <link
@@ -43,9 +49,7 @@
   </head>
   <body>
     <header>
-      <div class="logo-container">
         <img class="logo" src="images/logo.png" alt="Logo" />
-      </div>
       <div class="header-title-container">
         <h3>Caleta Olivia<br />Chamber of Commerce</h3>
       </div>
@@ -91,7 +95,11 @@
             This is the resource text. This is the resource text. This is the
             resource text.
           </p>
-          <img class="event-card-image" src="images/dots-circle-horizontal.png" alt="Go to event button" />
+          <img
+            class="event-card-image"
+            src="images/dots-circle-horizontal.png"
+            alt="Go to event button"
+          />
         </div>
         <div class="event-card">
           <h3 class="event-card-title">Event Title</h3>
@@ -99,7 +107,11 @@
             This is the resource text. This is the resource text. This is the
             resource text.
           </p>
-          <img class="event-card-image" src="images/dots-circle-horizontal.png" alt="Go to event button" />
+          <img
+            class="event-card-image"
+            src="images/dots-circle-horizontal.png"
+            alt="Go to event button"
+          />
         </div>
         <div class="event-card">
           <h3 class="event-card-title">Event Title</h3>
@@ -107,13 +119,21 @@
             This is the resource text. This is the resource text. This is the
             resource text.
           </p>
-          <img class="event-card-image" src="images/dots-circle-horizontal.png" alt="Go to event button" />
+          <img
+            class="event-card-image"
+            src="images/dots-circle-horizontal.png"
+            alt="Go to event button"
+          />
         </div>
       </section>
       <section class="business-section">
         <h2>Spotlights in Caleta Olivia</h2>
         <div class="business-card">
-          <img class="business-card-image" src="images/gorosito-hero.webp" alt="" />
+          <img
+            class="business-card-image"
+            src="images/gorosito-hero.webp"
+            alt=""
+          />
           <p>
             This is the place text. This is the place text. This is the place
             text. This is the place text.
@@ -121,7 +141,11 @@
           <a class="button business-card-button" href="#">Discover More</a>
         </div>
         <div class="business-card">
-          <img class="business-card-image" src="images/gorosito-hero.webp" alt="" />
+          <img
+            class="business-card-image"
+            src="images/gorosito-hero.webp"
+            alt=""
+          />
           <p>
             This is the place text. This is the place text. This is the place
             text. This is the place text.
@@ -129,7 +153,11 @@
           <a class="button business-card-button" href="#">Discover More</a>
         </div>
         <div class="business-card">
-          <img class="business-card-image" src="images/gorosito-hero.webp" alt="" />
+          <img
+            class="business-card-image"
+            src="images/gorosito-hero.webp"
+            alt=""
+          />
           <p>
             This is the place text. This is the place text. This is the place
             text. This is the place text.
@@ -146,13 +174,29 @@
         </div>
         <div class="contact">
           <p>Contact Us</p>
-          <img class="whatsapp-icon" src="images/whatsapp.png" alt="Whatsapp Icon" />
+          <img
+            class="whatsapp-icon"
+            src="images/whatsapp.png"
+            alt="Whatsapp Icon"
+          />
           <img class="email-icon" src="images/mail.png" alt="Email Icon" />
         </div>
         <div class="social">
-          <img class="instagram-icon" src="images/instagram.png" alt="Instagram Icon" />
-          <img class="linkedin-icon" src="images/linkedin.png" alt="LinkedIn Icon" />
-          <img class="youtube-icon" src="images/youtube.png" alt="Youtube Icon" />
+          <img
+            class="instagram-icon"
+            src="images/instagram.png"
+            alt="Instagram Icon"
+          />
+          <img
+            class="linkedin-icon"
+            src="images/linkedin.png"
+            alt="LinkedIn Icon"
+          />
+          <img
+            class="youtube-icon"
+            src="images/youtube.png"
+            alt="Youtube Icon"
+          />
         </div>
       </div>
       <div class="project-sign">
