feat: Add nav style

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -63,10 +63,10 @@
     </header>
     <nav id="nav-section">
       <ul class="navigation-container">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Discover</a></li>
-        <li><a href="#">Directory</a></li>
-        <li><a href="#">Join</a></li>
+        <li><a class="nav-link" href="#">Home</a></li>
+        <li><a class="nav-link" href="#">Discover</a></li>
+        <li><a class="nav-link" href="#">Directory</a></li>
+        <li><a class="nav-link" href="#">Join Now</a></li>
       </ul>
     </nav>
     <section class="hero-container">
