--- a/chamber/index.html
+++ b/chamber/index.html
@@ -79,8 +79,9 @@
       <a class="button hero-call-to-action" href="#">Join</a>
     </section>
     <section class="weather-widget">
-      <h3>Caleta Olivia</h3>
-      <a class="button weather-button" href="#">More...</a>
+      <!-- <h3>Caleta Olivia</h3> -->
+      <!-- <a class="button weather-button" href="#">More...</a> -->
+      <span class="moving-text">This will contain weather information</span>
     </section>
     <section class="directory-button-container">
       <h3>Our Directory</h3>
