--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,7 +28,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,600;0,800;1,200;1,300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600&display=swap"
       rel="stylesheet"
     />
 
@@ -49,7 +49,7 @@
   </head>
   <body>
     <header>
-        <img class="logo" src="images/logo.png" alt="Logo" />
+      <img class="logo" src="images/logo.png" alt="Logo" />
       <div class="header-title-container">
         <h3>Caleta Olivia<br />Chamber of Commerce</h3>
       </div>
@@ -93,9 +93,10 @@
         <div class="event-card">
           <h3 class="event-card-title">Event Title</h3>
           <p>
-            This is the resource text. This is the resource text. This is the
-            resource text.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, ea doloremque culpa repellat architecto nemo quo nobis vitae a, sunt fugiat et accusamus corporis nostrum? Illum alias sed est ullam.
           </p>
+          <p>📍 Bernardino del Hoyo 567 </p>
+          <p>🕚 19:00 </p>
           <img
             class="event-card-image"
             src="images/dots-circle-horizontal.png"
@@ -105,9 +106,10 @@
         <div class="event-card">
           <h3 class="event-card-title">Event Title</h3>
           <p>
-            This is the resource text. This is the resource text. This is the
-            resource text.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores porro, inventore iusto, doloribus libero quibusdam a tenetur ex natus quas dicta ducimus repellendus aut aliquam sit. In nam dolorum eveniet.
           </p>
+          <p>📍 Bernardino del Hoyo 567 </p>
+          <p>🕚 19:00 </p>
           <img
             class="event-card-image"
             src="images/dots-circle-horizontal.png"
@@ -117,9 +119,10 @@
         <div class="event-card">
           <h3 class="event-card-title">Event Title</h3>
           <p>
-            This is the resource text. This is the resource text. This is the
-            resource text.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores aperiam fugit optio quasi natus quibusdam, id laboriosam hic! Itaque error veniam delectus nostrum ipsum facere accusantium possimus ut sint ab.
           </p>
+          <p>📍 Bernardino del Hoyo 567 </p>
+          <p>🕚 19:00 </p>
           <img
             class="event-card-image"
             src="images/dots-circle-horizontal.png"
@@ -136,9 +139,10 @@
             alt=""
           />
           <p>
-            This is the place text. This is the place text. This is the place
-            text. This is the place text.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente numquam eius odio provident dolor. Fuga deserunt illum dignissimos iste laudantium asperiores eveniet saepe commodi. Fugit deleniti voluptate magni et nulla.
           </p>
+          <p>📍 Bernardino del Hoyo 567 </p>
+          <p>🕚 19:00 </p>
           <a class="button business-card-button" href="#">Discover More</a>
         </div>
         <div class="business-card">
