--- a/chamber/index.html
+++ b/chamber/index.html
@@ -102,6 +102,7 @@
             src="images/dots-circle-horizontal.png"
             alt="Go to event button"
           />
+          <hr>
         </div>
         <div class="event-card">
           <h3 class="event-card-title">Event Title</h3>
@@ -115,6 +116,7 @@
             src="images/dots-circle-horizontal.png"
             alt="Go to event button"
           />
+          <hr>
         </div>
         <div class="event-card">
           <h3 class="event-card-title">Event Title</h3>
@@ -128,6 +130,7 @@
             src="images/dots-circle-horizontal.png"
             alt="Go to event button"
           />
+          <hr>
         </div>
       </section>
       <section class="business-section">
@@ -138,11 +141,10 @@
             src="images/gorosito-hero.webp"
             alt=""
           />
+          <h3>Place Title</h3>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente numquam eius odio provident dolor. Fuga deserunt illum dignissimos iste laudantium asperiores eveniet saepe commodi. Fugit deleniti voluptate magni et nulla.
           </p>
-          <p>📍 Bernardino del Hoyo 567 </p>
-          <p>🕚 19:00 </p>
           <a class="button business-card-button" href="#">Discover More</a>
         </div>
         <div class="business-card">
@@ -151,6 +153,7 @@
             src="images/gorosito-hero.webp"
             alt=""
           />
+          <h3>Place Title</h3>
           <p>
             This is the place text. This is the place text. This is the place
             text. This is the place text.
@@ -163,6 +166,7 @@
             src="images/gorosito-hero.webp"
             alt=""
           />
+          <h3>Place Title</h3>
           <p>
             This is the place text. This is the place text. This is the place
             text. This is the place text.
