feat: Add footer style

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -93,44 +93,52 @@
         <div class="event-card">
           <h3 class="event-card-title">Event Title</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, ea doloremque culpa repellat architecto nemo quo nobis vitae a, sunt fugiat et accusamus corporis nostrum? Illum alias sed est ullam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, ea
+            doloremque culpa repellat architecto nemo quo nobis vitae a, sunt
+            fugiat et accusamus corporis nostrum? Illum alias sed est ullam.
           </p>
-          <p>📍 Bernardino del Hoyo 567 </p>
-          <p>🕚 19:00 </p>
+          <p>📍 Bernardino del Hoyo 567</p>
+          <p>🕚 19:00</p>
           <img
             class="event-card-image"
             src="images/dots-circle-horizontal.png"
             alt="Go to event button"
           />
-          <hr>
+          <hr />
         </div>
         <div class="event-card">
           <h3 class="event-card-title">Event Title</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores porro, inventore iusto, doloribus libero quibusdam a tenetur ex natus quas dicta ducimus repellendus aut aliquam sit. In nam dolorum eveniet.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            porro, inventore iusto, doloribus libero quibusdam a tenetur ex
+            natus quas dicta ducimus repellendus aut aliquam sit. In nam dolorum
+            eveniet.
           </p>
-          <p>📍 Bernardino del Hoyo 567 </p>
-          <p>🕚 19:00 </p>
+          <p>📍 Bernardino del Hoyo 567</p>
+          <p>🕚 19:00</p>
           <img
             class="event-card-image"
             src="images/dots-circle-horizontal.png"
             alt="Go to event button"
           />
-          <hr>
+          <hr />
         </div>
         <div class="event-card">
           <h3 class="event-card-title">Event Title</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores aperiam fugit optio quasi natus quibusdam, id laboriosam hic! Itaque error veniam delectus nostrum ipsum facere accusantium possimus ut sint ab.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            aperiam fugit optio quasi natus quibusdam, id laboriosam hic! Itaque
+            error veniam delectus nostrum ipsum facere accusantium possimus ut
+            sint ab.
           </p>
-          <p>📍 Bernardino del Hoyo 567 </p>
-          <p>🕚 19:00 </p>
+          <p>📍 Bernardino del Hoyo 567</p>
+          <p>🕚 19:00</p>
           <img
             class="event-card-image"
             src="images/dots-circle-horizontal.png"
             alt="Go to event button"
           />
-          <hr>
+          <hr />
         </div>
       </section>
       <section class="business-section">
@@ -143,7 +151,10 @@
           />
           <h3>Place Title</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente numquam eius odio provident dolor. Fuga deserunt illum dignissimos iste laudantium asperiores eveniet saepe commodi. Fugit deleniti voluptate magni et nulla.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente
+            numquam eius odio provident dolor. Fuga deserunt illum dignissimos
+            iste laudantium asperiores eveniet saepe commodi. Fugit deleniti
+            voluptate magni et nulla.
           </p>
           <a class="button business-card-button" href="#">Discover More</a>
         </div>
@@ -176,20 +187,31 @@
       </section>
     </main>
     <footer>
-      <div class="site-fotter">
+      <div class="site-footer">
         <div class="location">
-          <img class="location-icon" src="images/map.png" alt="Location Icon" />
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d343.691074448509!2d-67.51889957508916!3d-46.43822242101659!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbde5dfbae986b8ff%3A0x3b514e4382f1fed5!2sAv.%20San%20Mart%C3%ADn%2C%20Caleta%20Olivia%2C%20Santa%20Cruz!5e0!3m2!1sen!2sar!4v1687406899531!5m2!1sen!2sar"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
           <p>San Martín 1869</p>
+          <img class="location-icon" src="images/map.png" alt="Location Icon" />
         </div>
+        <div>|</div>
         <div class="contact">
           <p>Contact Us</p>
-          <img
-            class="whatsapp-icon"
-            src="images/whatsapp.png"
-            alt="Whatsapp Icon"
-          />
-          <img class="email-icon" src="images/mail.png" alt="Email Icon" />
+          <div>
+            <img
+              class="whatsapp-icon"
+              src="images/whatsapp.png"
+              alt="Whatsapp Icon"
+            />
+            <img class="email-icon" src="images/mail.png" alt="Email Icon" />
+          </div>
         </div>
+        <div>|</div>
+
         <div class="social">
           <img
             class="instagram-icon"
@@ -210,14 +232,12 @@
       </div>
       <div class="project-sign">
         <p>
-          &copy; <span id="year"></span> &bull; Fernando Chazarreta &bull;
-          <span id="flag"></span> Argentina
+          &copy; <span id="year"></span> &bull; Fernando Chazarreta &bull; Argentina
         </p>
         <p>
-          This site is a project for the "WDD230 - Front End Development"
-          course.
+          BYU WDD230 - Front End Development
         </p>
-        <p id="lastModified"></p>
+        <p class="last-modification">Last Modification: </p>
       </div>
     </footer>
   </body>
