fix: add meta og image url. Change widget element

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,7 +18,7 @@
     <!-- Meta tags: Open graph properties. Used when the page is shared into Facebook -->
     <meta property="og:title" content="Caleta Olivia Chamber of Commerce" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="[Page Image URL]" />
+    <meta property="og:image" content="images/gorosito-hero.webp" />
     <meta
       property="og:url"
       content="https://fernandochaza.github.io/wdd230/chamber/"
@@ -78,11 +78,11 @@
       <h1 class="hero-header">Caleta Olivia<br />Chamber of Commerce</h1>
       <a class="button hero-call-to-action" href="#">Join</a>
     </section>
-    <section class="weather-widget">
+    <aside class="weather-widget">
       <!-- <h3>Caleta Olivia</h3> -->
       <!-- <a class="button weather-button" href="#">More...</a> -->
       <span class="moving-text">This will contain weather information</span>
-    </section>
+    </aside>
     <section class="directory-button-container">
       <h3>Our Directory</h3>
       <a class="button directory-button" href="#">Directory</a>
