--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,7 +18,7 @@
     <!-- Meta tags: Open graph properties. Used when the page is shared into Facebook -->
     <meta property="og:title" content="Caleta Olivia Chamber of Commerce" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/gorosito-hero.webp" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/fernandochaza/wdd230/main/chamber/images/gorosito-hero.webp" />
     <meta
       property="og:url"
       content="https://fernandochaza.github.io/wdd230/chamber/"
