feat: Add Responsive larger(tablet) view. Events and Spotlights sections

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -51,7 +51,8 @@
     <header>
       <img class="logo" src="images/logo.png" alt="Logo" />
       <div class="header-title-container">
-        <h3>Caleta Olivia<br />Chamber of Commerce</h3>
+        <h3>Caleta Olivia</h3>
+        <h3>Chamber of Commerce</h3>
       </div>
       <div class="menu-button-container">
         <img
@@ -90,7 +91,8 @@
     <main>
       <section class="events-section">
         <h2>Upcoming Events</h2>
-        <div class="event-card">
+        <aside class="events-left-frame"></aside>
+        <div class="event-card event-1">
           <h3 class="event-card-title">Event Title</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, ea
@@ -106,7 +108,7 @@
           />
           <hr />
         </div>
-        <div class="event-card">
+        <div class="event-card event-2">
           <h3 class="event-card-title">Event Title</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
@@ -123,7 +125,7 @@
           />
           <hr />
         </div>
-        <div class="event-card">
+        <div class="event-card event-3">
           <h3 class="event-card-title">Event Title</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
@@ -143,7 +145,8 @@
       </section>
       <section class="business-section">
         <h2>Spotlights in Caleta Olivia</h2>
-        <div class="business-card">
+        <aside class="spotlights-left-frame"></aside>
+        <div class="business-card business-1">
           <img
             class="business-card-image"
             src="images/gorosito-hero.webp"
@@ -158,7 +161,7 @@
           </p>
           <a class="button business-card-button" href="#">Discover More</a>
         </div>
-        <div class="business-card">
+        <div class="business-card business-2">
           <img
             class="business-card-image"
             src="images/gorosito-hero.webp"
@@ -171,7 +174,20 @@
           </p>
           <a class="button business-card-button" href="#">Discover More</a>
         </div>
-        <div class="business-card">
+        <div class="business-card business-3">
+          <img
+            class="business-card-image"
+            src="images/gorosito-hero.webp"
+            alt=""
+          />
+          <h3>Place Title</h3>
+          <p>
+            This is the place text. This is the place text. This is the place
+            text. This is the place text.
+          </p>
+          <a class="button business-card-button" href="#">Discover More</a>
+        </div>
+        <div class="business-card business-4">
           <img
             class="business-card-image"
             src="images/gorosito-hero.webp"
