Add desktop css

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,6 +39,7 @@
     />
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/larger.css" />
+    <link rel="stylesheet" href="styles/desktop.css" />
 
     <!-- Favicon -->
     <link rel="icon" href="favicon.ico" />
@@ -143,12 +144,12 @@
           <hr />
         </div>
       </section>
-      <section class="business-section">
+      <section class="spotlights-section">
         <h2>Spotlights in Caleta Olivia</h2>
         <aside class="spotlights-left-frame"></aside>
-        <div class="business-card business-1">
+        <div class="spotlight-card spotlight-1">
           <img
-            class="business-card-image"
+            class="spotlight-card-image"
             src="images/gorosito-hero.webp"
             alt=""
           />
@@ -159,11 +160,11 @@
             iste laudantium asperiores eveniet saepe commodi. Fugit deleniti
             voluptate magni et nulla.
           </p>
-          <a class="button business-card-button" href="#">Discover More</a>
+          <a class="button spotlight-card-button" href="#">Discover More</a>
         </div>
-        <div class="business-card business-2">
+        <div class="spotlight-card spotlight-2">
           <img
-            class="business-card-image"
+            class="spotlight-card-image"
             src="images/gorosito-hero.webp"
             alt=""
           />
@@ -172,11 +173,11 @@
             This is the place text. This is the place text. This is the place
             text. This is the place text.
           </p>
-          <a class="button business-card-button" href="#">Discover More</a>
+          <a class="button spotlight-card-button" href="#">Discover More</a>
         </div>
-        <div class="business-card business-3">
+        <div class="spotlight-card spotlight-3">
           <img
-            class="business-card-image"
+            class="spotlight-card-image"
             src="images/gorosito-hero.webp"
             alt=""
           />
@@ -185,11 +186,11 @@
             This is the place text. This is the place text. This is the place
             text. This is the place text.
           </p>
-          <a class="button business-card-button" href="#">Discover More</a>
+          <a class="button spotlight-card-button" href="#">Discover More</a>
         </div>
-        <div class="business-card business-4">
+        <div class="spotlight-card spotlight-4">
           <img
-            class="business-card-image"
+            class="spotlight-card-image"
             src="images/gorosito-hero.webp"
             alt=""
           />
@@ -198,7 +199,7 @@
             This is the place text. This is the place text. This is the place
             text. This is the place text.
           </p>
-          <a class="button business-card-button" href="#">Discover More</a>
+          <a class="button spotlight-card-button" href="#">Discover More</a>
         </div>
       </section>
     </main>
