feat: Add dynamic last modification date to document

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -257,5 +257,6 @@
         <p class="last-modification">Last Modification: </p>
       </div>
     </footer>
+    <script src="scripts/main.js" type="module"></script>
   </body>
 </html>
