--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <!-- Setting the viewport to make the website look good on all devices:-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Set page title-->
     <title>Fernando Chazarreta - WDD 230 - Web Frontend Development</title>
 
@@ -11,26 +11,38 @@
     <meta
       name="description"
       content="This is the course assignment portal for BYU's 'WDD 230 - Web Frontend Development' course. By Fernando Chazarreta"
-    >
-    <meta name="author" content="Fernando Chazarreta">
+    />
+    <meta name="author" content="Fernando Chazarreta" />
 
     <!-- Meta tags: Open graph properties. Used when the page is shared into Facebook -->
-    <meta property="og:title" content="Fernando Chazarreta - WDD 230 - Web Frontend Development">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://media-cdn.tripadvisor.com/media/photo-s/14/b8/8c/ea/photo0jpg.jpg">
-    <meta property="og:url" content="https://fernandochaza.github.io/wdd230/">
+    <meta
+      property="og:title"
+      content="Fernando Chazarreta - WDD 230 - Web Frontend Development"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://media-cdn.tripadvisor.com/media/photo-s/14/b8/8c/ea/photo0jpg.jpg"
+    />
+    <meta property="og:url" content="https://fernandochaza.github.io/wdd230/" />
 
     <!-- Google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500&family=Inter:wght@100;300;400;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500&family=Inter:wght@100;300;400;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <!-- External CSS-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/larger.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/larger.css" />
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico" />
   </head>
   <body>
     <header>
@@ -38,15 +50,22 @@
         id="profile-picture"
         src="images/profile-pic.webp"
         alt="Fernando Chazarreta's profile picture"
-      >
+      />
       <h1>Fernando Chazarreta</h1>
       <div class="dark-mode-container">
-        <img class="dark-light-button" src="images/dark-mode.svg" alt="Dark Mode Button">
+        <img
+          class="dark-light-button"
+          src="images/dark-mode.svg"
+          alt="Dark Mode Button"
+        />
       </div>
-  
     </header>
     <div class="menu-button-container">
-      <img class="menu-button" src="images/hamburger-menu.svg" alt="Menu Button">
+      <img
+        class="menu-button"
+        src="images/hamburger-menu.svg"
+        alt="Menu Button"
+      />
     </div>
     <nav id="my-nav">
       <ul>
@@ -61,11 +80,27 @@
         <h2 class="title">WDD 230: Web Frontend Development</h2>
       </div>
       <section class="card">
-        <h3 class="card-header">Learning Activities</h3>
+        <h3 class="card-header">Learni  ng Activities</h3>
         <ul>
-          <li>Week 02 - <a href="week02/design.html" target="_blank">Web Design Principles</a></li>
-          <li>Week 02 - <a href="https://codepen.io/fernandochaza/pen/abQNpMY" target="_blank">Responsive Navigation</a></li>
-          <li>Week 02 - <a href="week02/bom.html" target="_blank">Manipulating the DOM</a></li>
+          <li>
+            Week 02 -
+            <a href="week02/design.html" target="_blank"
+              >Web Design Principles</a
+            >
+          </li>
+          <li>
+            Week 02 -
+            <a
+              href="https://codepen.io/fernandochaza/pen/abQNpMY"
+              target="_blank"
+              >Responsive Navigation</a
+            >
+          </li>
+          <li>
+            Week 02 -
+            <a href="week02/bom.html" target="_blank">Manipulating the DOM</a>
+          </li>
+          <li>Week 03 - <a href="week03/images/landscape.webp">WebP</a></li>
         </ul>
       </section>
       <section class="card">
