--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h2 class="title">WDD 230: Web Frontend Development</h2>
       </div>
       <section class="card">
-        <h3 class="card-header">Learni  ng Activities</h3>
+        <h3 class="card-header">Learni ng Activities</h3>
         <ul>
           <li>
             Week 02 -
@@ -101,6 +101,8 @@
             <a href="week02/bom.html" target="_blank">Manipulating the DOM</a>
           </li>
           <li>Week 03 - <a href="week03/images/landscape.webp">WebP</a></li>
+          <li>Week 03 - <a href="week03/lazyload.html">Lazy Load</a></li>
+          <li>Week 03 - <a href="week03/responsive-images.html">Responsive Images</a></li>
         </ul>
       </section>
       <section class="card">
