--- a/chamber/index.html
+++ b/chamber/index.html
@@ -56,11 +56,7 @@
         <h3>Chamber of Commerce</h3>
       </div>
       <div class="menu-button-container">
-        <img
-          class="menu-button"
-          src="images/menu-button.png"
-          alt="Menu Button"
-        />
+        <button class="menu-button">☰</button>
       </div>
     </header>
     <nav id="nav-section">
@@ -83,7 +79,7 @@
     <aside class="weather-widget">
       <!-- <h3>Caleta Olivia</h3> -->
       <!-- <a class="button weather-button" href="#">More...</a> -->
-      <span class="moving-text">This will contain weather information</span>
+      <span class="moving-text">☀ Caleta Olivia | 23°C | Wind 23km/h East</span>
     </aside>
     <section class="directory-button-container">
       <h3>Our Directory</h3>
